examples/test/testpolicy19300.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19300
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key14: value11
      key24: value29
      key22: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value48
          key1: value0
          key39: value17
      podSelector:
        matchLabels:
          key6: value9
          key19: value41
